Bug 146559 New mail indicator does not work for non-inbox imap folders r=bienvenu@netscape.com, sr=brendan@mozilla.org